--- a/oneAPI- ready for deployment.ipynb
+++ b/oneAPI- ready for deployment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "id": "MqMot_ZAmyMR",
    "metadata": {},
    "outputs": [
@@ -11,33 +11,51 @@
      "output_type": "stream",
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: nltk in /home/u190579/.local/lib/python3.9/site-packages (3.8.1)\n",
-      "Requirement already satisfied: joblib in /glob/development-tools/versions/oneapi/2023.1.1/oneapi/intelpython/python3.9/lib/python3.9/site-packages (from nltk) (1.2.0)\n",
-      "Requirement already satisfied: regex>=2021.8.3 in /home/u190579/.local/lib/python3.9/site-packages (from nltk) (2023.5.5)\n",
-      "Requirement already satisfied: click in /home/u190579/.local/lib/python3.9/site-packages (from nltk) (8.1.3)\n",
-      "Requirement already satisfied: tqdm in /glob/development-tools/versions/oneapi/2023.1.1/oneapi/intelpython/python3.9/lib/python3.9/site-packages (from nltk) (4.64.0)\n"
+      "Requirement already satisfied: nltk in /Users/maheshalyana/Library/Python/3.9/lib/python/site-packages (3.8.1)\n",
+      "Requirement already satisfied: click in /Users/maheshalyana/Library/Python/3.9/lib/python/site-packages (from nltk) (8.1.3)\n",
+      "Requirement already satisfied: joblib in /Users/maheshalyana/Library/Python/3.9/lib/python/site-packages (from nltk) (1.2.0)\n",
+      "Requirement already satisfied: tqdm in /Users/maheshalyana/Library/Python/3.9/lib/python/site-packages (from nltk) (4.65.0)\n",
+      "Requirement already satisfied: regex>=2021.8.3 in /Users/maheshalyana/Library/Python/3.9/lib/python/site-packages (from nltk) (2023.5.5)\n",
+      "\u001b[33mWARNING: You are using pip version 21.2.4; however, version 23.1.2 is available.\n",
+      "You should consider upgrading via the '/Applications/Xcode.app/Contents/Developer/usr/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\n"
      ]
     }
    ],
    "source": [
-    "!pip install nltk\n",
+    "!pip3 install nltk\n",
     "\n",
     "# !pip install --user nltk"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 6,
    "id": "65e10b82-8a38-4a43-a4b1-c4f5f8d29f5a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting numpy\n",
+      "  Downloading numpy-1.24.3-cp39-cp39-macosx_11_0_arm64.whl (13.9 MB)\n",
+      "\u001b[K     |████████████████████████████████| 13.9 MB 9.0 MB/s eta 0:00:01\n",
+      "\u001b[?25hInstalling collected packages: numpy\n",
+      "Successfully installed numpy-1.24.3\n",
+      "\u001b[33mWARNING: You are using pip version 21.2.4; however, version 23.1.2 is available.\n",
+      "You should consider upgrading via the '/Applications/Xcode.app/Contents/Developer/usr/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
+    "!pip3 install numpy\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "id": "decc405d-88c6-4e77-8d03-eeaf9cc85739",
    "metadata": {},
    "outputs": [
@@ -46,12 +64,13 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     /home/u190579/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n",
-      "[nltk_data] Downloading package punkt to /home/u190579/nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n",
-      "[nltk_data] Downloading package wordnet to /home/u190579/nltk_data...\n",
-      "[nltk_data]   Package wordnet is already up-to-date!\n"
+      "[nltk_data]     /Users/maheshalyana/nltk_data...\n",
+      "[nltk_data]   Unzipping corpora/stopwords.zip.\n",
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     /Users/maheshalyana/nltk_data...\n",
+      "[nltk_data]   Unzipping tokenizers/punkt.zip.\n",
+      "[nltk_data] Downloading package wordnet to\n",
+      "[nltk_data]     /Users/maheshalyana/nltk_data...\n"
      ]
     },
     {
@@ -60,7 +79,7 @@
        "True"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,13 +94,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "id": "eUWkp5OJmd2L",
    "metadata": {
     "id": "eUWkp5OJmd2L"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting pandas\n",
+      "  Downloading pandas-2.0.1-cp39-cp39-macosx_11_0_arm64.whl (10.9 MB)\n",
+      "\u001b[K     |████████████████████████████████| 10.9 MB 13.3 MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting tzdata>=2022.1\n",
+      "  Using cached tzdata-2023.3-py2.py3-none-any.whl (341 kB)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/maheshalyana/Library/Python/3.9/lib/python/site-packages (from pandas) (2.8.2)\n",
+      "Collecting pytz>=2020.1\n",
+      "  Using cached pytz-2023.3-py2.py3-none-any.whl (502 kB)\n",
+      "Requirement already satisfied: numpy>=1.20.3 in /Users/maheshalyana/Library/Python/3.9/lib/python/site-packages (from pandas) (1.24.3)\n",
+      "Requirement already satisfied: six>=1.5 in /Applications/Xcode.app/Contents/Developer/Library/Frameworks/Python3.framework/Versions/3.9/lib/python3.9/site-packages (from python-dateutil>=2.8.2->pandas) (1.15.0)\n",
+      "Installing collected packages: tzdata, pytz, pandas\n",
+      "Successfully installed pandas-2.0.1 pytz-2023.3 tzdata-2023.3\n",
+      "\u001b[33mWARNING: You are using pip version 21.2.4; however, version 23.1.2 is available.\n",
+      "You should consider upgrading via the '/Applications/Xcode.app/Contents/Developer/usr/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
+    "!pip3 install pandas\n",
     "import pandas as pd\n",
     "import nltk\n",
     "from nltk.corpus import stopwords\n",
@@ -129,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "id": "71d68b01-a35c-4256-8510-50f18641c67e",
    "metadata": {},
    "outputs": [
@@ -231,8 +273,8 @@
        "</div>"
       ],
       "text/plain": [
-       "           Facebook    GooglePlus      LinkedIn  SentimentTitle  \\\n",
-       "count  40508.000000  40508.000000  40508.000000    40508.000000   \n",
+       "           Facebook    GooglePlus      LinkedIn  SentimentTitle   \n",
+       "count  40508.000000  40508.000000  40508.000000    40508.000000  \\\n",
        "mean     142.675225      5.016737     14.014269       -0.007364   \n",
        "std      745.148920     22.592353     73.032200        0.135795   \n",
        "min       -1.000000     -1.000000     -1.000000       -0.838525   \n",
@@ -252,7 +294,7 @@
        "max             0.900000  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "id": "1e6961fd-fcd7-40d7-8950-23cde3d14ace",
    "metadata": {},
    "outputs": [
@@ -273,7 +315,7 @@
        "(40508, 10)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "id": "LTnRET8Cml6A",
    "metadata": {
     "id": "LTnRET8Cml6A"
@@ -296,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 13,
    "id": "Hy1tLJsamw2j",
    "metadata": {
     "colab": {
@@ -311,16 +353,25 @@
      "output_type": "stream",
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: gensim in /home/u190579/.local/lib/python3.9/site-packages (4.3.1)\n",
-      "Requirement already satisfied: smart-open>=1.8.1 in /home/u190579/.local/lib/python3.9/site-packages (from gensim) (6.3.0)\n",
-      "Requirement already satisfied: numpy>=1.18.5 in /home/u190579/.local/lib/python3.9/site-packages (from gensim) (1.22.4)\n",
-      "Requirement already satisfied: scipy>=1.7.0 in /glob/development-tools/versions/oneapi/2023.1.1/oneapi/intelpython/python3.9/lib/python3.9/site-packages (from gensim) (1.7.3)\n",
-      "49.398130893707275\n"
+      "Collecting gensim\n",
+      "  Downloading gensim-4.3.1-cp39-cp39-macosx_11_0_arm64.whl (24.0 MB)\n",
+      "\u001b[K     |████████████████████████████████| 24.0 MB 8.2 MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting scipy>=1.7.0\n",
+      "  Downloading scipy-1.10.1-cp39-cp39-macosx_12_0_arm64.whl (28.9 MB)\n",
+      "\u001b[K     |████████████████████████████████| 28.9 MB 6.7 MB/s eta 0:00:011\n",
+      "\u001b[?25hRequirement already satisfied: numpy>=1.18.5 in /Users/maheshalyana/Library/Python/3.9/lib/python/site-packages (from gensim) (1.24.3)\n",
+      "Collecting smart-open>=1.8.1\n",
+      "  Using cached smart_open-6.3.0-py3-none-any.whl (56 kB)\n",
+      "Installing collected packages: smart-open, scipy, gensim\n",
+      "Successfully installed gensim-4.3.1 scipy-1.10.1 smart-open-6.3.0\n",
+      "\u001b[33mWARNING: You are using pip version 21.2.4; however, version 23.1.2 is available.\n",
+      "You should consider upgrading via the '/Applications/Xcode.app/Contents/Developer/usr/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\n",
+      "24.123841047286987\n"
      ]
     }
    ],
    "source": [
-    "!pip install gensim\n",
+    "!pip3 install gensim\n",
     "import gensim\n",
     "\n",
     "# Convert preprocessed text to gensim dictionary and corpus\n",
@@ -341,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "7KHgzObsnm92",
    "metadata": {
     "colab": {
@@ -387,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "5717507c-7a35-4b49-93c3-b8d06a1badf2",
    "metadata": {},
    "outputs": [],
@@ -401,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "id": "0e16c05b-3b1a-47d3-bcb2-5a9b3870d9d6",
    "metadata": {},
    "outputs": [
@@ -418,6 +469,9 @@
     "from sklearn.metrics import mean_squared_error\n",
     "X = doc_topic_matrix\n",
     "y = df['SentimentTitle'].values\n",
+    "\n",
+    "print(X)\n",
+    "\n",
     "svm_model = SVR(kernel='linear')\n",
     "SVR_beg = time.time()\n",
     "svm_model.fit(X, y)\n",
@@ -431,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "id": "992c50ff-e40a-42ee-92b2-7d5c12795f36",
    "metadata": {},
    "outputs": [
@@ -452,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "id": "98e330d4-1efe-438f-91d5-359afe2fa051",
    "metadata": {},
    "outputs": [
@@ -499,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "346243ad-f1a7-497a-a61b-3512e78e3958",
    "metadata": {},
    "outputs": [
@@ -521,7 +575,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
+   "id": "3ec9ce22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "filename = 'finalized_model.sav'\n",
+    "pickle.dump(svm_model, open(filename, 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "33e3ca11-43df-4dbd-8829-25b215a0ee1a",
    "metadata": {},
    "outputs": [
@@ -553,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "id": "6fa410b6-09ec-482a-adaf-528219607a1e",
    "metadata": {},
    "outputs": [],
@@ -564,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "id": "4b3d5566-828b-4d4d-9f41-1b255f091cd5",
    "metadata": {},
    "outputs": [],
@@ -576,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "id": "e4315232-1033-47a8-89d7-1c88586be141",
    "metadata": {},
    "outputs": [
@@ -595,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "id": "1190adf9-c30d-40d8-8f32-8d8e9354d57d",
    "metadata": {},
    "outputs": [
@@ -637,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "6Xqpg1VKowL9",
    "metadata": {
     "id": "6Xqpg1VKowL9"
@@ -676,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "kgbrUMgeqXbK",
    "metadata": {
     "colab": {
@@ -711,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "7v5RMIn1pMhv",
    "metadata": {
     "colab": {
@@ -742,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "ivTeEco5qrDa",
    "metadata": {
     "id": "ivTeEco5qrDa"
@@ -791,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "90a61cdc-5d2a-4535-81ae-e7a99916d09c",
    "metadata": {},
    "outputs": [],
@@ -801,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "k4BQQM_zq-jV",
    "metadata": {
     "colab": {
@@ -840,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "CVzR_VGWtHeW",
    "metadata": {
     "id": "CVzR_VGWtHeW"
@@ -853,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "qymOoP9Qy_jq",
    "metadata": {
     "id": "qymOoP9Qy_jq"
@@ -866,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "d--H9WG-yVbX",
    "metadata": {
     "colab": {
@@ -907,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "wYKaIjn8yzvJ",
    "metadata": {
     "colab": {
@@ -937,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "Gbg_hQZkzSu0",
    "metadata": {
     "colab": {
@@ -963,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "LUmfb1t3zfWt",
    "metadata": {
     "colab": {
@@ -988,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "2khrTXxBzsqX",
    "metadata": {
     "id": "2khrTXxBzsqX"
@@ -1005,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "be7b476c-dd01-4730-b217-7f42682d3408",
    "metadata": {},
    "outputs": [
@@ -1024,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "0b180f92-3fcd-49f2-b5a0-7dcaeb0b8db1",
    "metadata": {},
    "outputs": [
@@ -1046,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "4f17d370-c4d9-400d-a6b1-e1c978551ee1",
    "metadata": {},
    "outputs": [],
@@ -1057,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "509c6716-e4ea-4ef7-9916-2bbffecb77e4",
    "metadata": {},
    "outputs": [
@@ -1107,9 +1173,9 @@
   },
   "gpuClass": "standard",
   "kernelspec": {
-   "display_name": "Python 3 (Intel® oneAPI 2023.1)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "c009-intel_distribution_of_python_3_oneapi-beta05-python"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1121,7 +1187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
